--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Noto Sans TC", sans-serif;
 }
+
 h1,
 h2,
 h3,
@@ -12,6 +13,7 @@ h5,
 h6 {
   font-weight: normal;
 }
+
 header {
   display: flex;
   align-items: center;
@@ -21,32 +23,40 @@ header {
   z-index: 5;
   background-color: rgb(255, 50, 50);
   box-shadow: 3px 3px 5px 1px rgb(133, 130, 130);
+
   div.logo {
     display: flex;
     align-items: center;
     flex: 5 1 400px;
     margin-left: 2rem;
+
     img {
       width: 6vw;
       height: 6vw;
     }
+
     h1 {
       color: white;
     }
   }
+
   nav {
     flex: 2 1 400px;
+
     ul {
       display: flex;
       list-style-type: none;
       justify-content: space-around;
+
       li {
+        padding: 2rem 0;
+
         a {
           color: #ffffff;
           text-decoration: none;
           font-size: 1.35rem;
-          padding: 2rem 2.313rem;
         }
+
         a:hover {
           background-color: white;
           color: rgb(255, 50, 50);
@@ -55,12 +65,17 @@ header {
       }
     }
   }
+
+  button.toggle {
+    display: none;
+  }
 }
+
 main {
   section.backimage {
     width: 100%;
     min-height: 90vh;
-    background-image: url(../Pictures/Pictures/T03.jpg);
+    background-image: url(/assets/images/pictures/T03.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -70,12 +85,14 @@ main {
     align-items: center;
     flex-direction: column;
     text-align: center;
+
     h3 {
       font-size: 3.5rem;
       color: white;
       margin: 2rem 0rem;
       text-shadow: #000 5px 5px 5px;
     }
+
     button.start {
       background-color: rgb(255, 50, 50);
       padding: 0.75rem 1rem;
@@ -85,6 +102,7 @@ main {
       border-radius: 1rem;
       cursor: pointer;
     }
+
     div.filter {
       background-color: rgba(0, 0, 0, 0.4);
       width: 100%;
@@ -100,15 +118,18 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: center;
+
     h2 {
       font-size: 2rem;
       margin: 2rem 1rem;
     }
+
     section.cards {
       display: flex;
       width: 80%;
       min-height: 80vh;
       flex-wrap: wrap;
+
       div.card {
         display: flex;
         flex-direction: column;
@@ -116,17 +137,20 @@ main {
         justify-content: space-around;
         padding: 1rem;
         flex: 1 1 300px;
+
         div.image-container {
           overflow: hidden;
           width: 15vw;
           height: 15vw;
           border-radius: 50%;
+
           img {
             width: 15vw;
             height: 15vw;
             border-radius: 50%;
             transition: all 0.2s;
           }
+
           img:hover {
             transform: scale(1.2);
           }
@@ -136,9 +160,11 @@ main {
           font-size: 2rem;
           margin: 1rem 0rem;
         }
+
         p {
           font-size: 1.23rem;
         }
+
         a {
           margin: 1rem 0rem;
           text-decoration: none;
@@ -152,6 +178,7 @@ main {
     }
   }
 }
+
 footer {
   display: flex;
   align-items: center;
@@ -160,24 +187,30 @@ footer {
   background-color: #e3dcdc;
   min-height: 40vh;
   justify-content: space-around;
+
   div.hh {
     display: flex;
     align-items: center;
+
     img {
       width: 5vw;
       height: 5vw;
     }
   }
+
   nav {
     width: 30%;
+
     ul {
       display: flex;
       width: 100%;
       justify-content: space-around;
       list-style-type: none;
       flex-wrap: wrap;
+
       li {
         flex-basis: 100px;
+
         a {
           font-weight: 600;
           text-decoration: none;
@@ -187,9 +220,11 @@ footer {
       }
     }
   }
+
   div.socialmedia {
     a {
       margin: 0rem 1rem;
+
       img {
         width: 3vw;
         height: 3vw;
@@ -197,6 +232,7 @@ footer {
     }
   }
 }
+
 /*scrollbar setting*/
 ::-webkit-scrollbar {
   width: 10px;
@@ -221,25 +257,82 @@ footer {
   header {
     div.logo {
       margin-left: 0.5rem;
+
       img {
         width: 15vw;
         height: 15vw;
       }
+
       h1 {
         font-size: 1.95rem;
       }
     }
+
+    button.toggle {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 40px;
+      height: 30px;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      margin-right: 2rem;
+      z-index: 10;
+
+      span {
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: white;
+        transition: all 0.3s ease;
+      }
+
+      &::before,
+      &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: white;
+        transition: all 0.3s ease;
+      }
+
+      &.active {
+        span {
+          opacity: 0;
+        }
+
+        &::before {
+          transform: translateY(13px) rotate(45deg);
+        }
+
+        &::after {
+          transform: translateY(-13px) rotate(-45deg);
+        }
+      }
+    }
+
     nav {
+      display: none;
+      width: 100%;
+
+      &.active {
+        display: block;
+      }
+
       ul {
         padding: 1rem;
         flex-direction: column;
 
         align-items: left;
         justify-content: left;
+
         li {
           a {
             padding: 0 70% 1px 0;
           }
+
           a.index {
             padding-right: 80%;
           }
@@ -247,16 +340,19 @@ footer {
       }
     }
   }
+
   main {
     section.backimage {
       h3 {
         font-size: 2rem;
       }
     }
+
     section.second {
       h2 {
         font-size: 1.5rem;
       }
+
       section.cards {
         div.card {
           div.image-container {
@@ -264,6 +360,7 @@ footer {
             width: 50vw;
             height: 50vw;
             border-radius: 50%;
+
             img {
               height: 50vw;
               width: 50vw;
@@ -273,6 +370,7 @@ footer {
       }
     }
   }
+
   footer {
     div.hh {
       img {
@@ -280,6 +378,7 @@ footer {
         height: 15vw;
       }
     }
+
     div.socialmedia {
       a {
         img {
